Criação da Classe EleitorAdapter
Signed-off-by: Mariana Vieira <marianaovieira1@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.ListaEleitor" />
-        <activity android:name=".EleitorDetalhe"></activity>
+        <activity android:name=".EleitorDetalhe" />
+        <activity android:name=".ItemEleitor"></activity>
     </application>
 
 </manifest>
