Criação da activity ListaCandidato
Signed-off-by: Mariana Vieira <marianaovieira1@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".activity.ListaEleitor" />
         <activity android:name=".activity.EleitorDetalhe" />
         <activity android:name=".activity.ItemEleitor" />
-        <activity android:name=".activity.ContentListaEleitor"></activity>
+        <activity android:name=".activity.ContentListaEleitor" />
+        <activity android:name=".activity.ListaCandidato"></activity>
     </application>
 
 </manifest>
