--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".activity.EleitorDetalhe" />
         <activity android:name=".activity.ItemEleitor" />
         <activity android:name=".activity.ContentListaEleitor" />
-        <activity android:name=".activity.ListaCandidato"></activity>
+        <activity android:name=".activity.ListaCandidato" />
+        <activity android:name=".CandidatoDetalhe"></activity>
     </application>
 
 </manifest>
