Início da configuração do CandidatoAdapter e Criação da Activity ItemCandidato
Signed-off-by: Mariana Vieira <marianaovieira1@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".activity.ItemEleitor" />
         <activity android:name=".activity.ContentListaEleitor" />
         <activity android:name=".activity.ListaCandidato" />
-        <activity android:name=".CandidatoDetalhe"></activity>
+        <activity android:name=".CandidatoDetalhe" />
+        <activity android:name=".ItemCandidato"></activity>
     </application>
 
 </manifest>
